# src/routes/user.route.js
@@ -1,5 +1,3 @@
-// user.route.js
-
 import express from "express";
 import asyncHandler from "express-async-handler";
 
@@ -9,4 +7,4 @@ export const userRouter = express.Router();
 
 userRouter.post("/signin", asyncHandler(userSignin));
 
-userRouter.post("/add/mission", asyncHandler(memberMission));
+userRouter.post("/missions/:missionId", asyncHandler(memberMission));
